Fixed navbar on mobile device

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -18,6 +18,13 @@
     }
   }
 
+@media only screen 
+and (max-width: 340px) {
+  .navbar-brand {
+    margin: 0;
+  }
+}
+
 /* btn style for cryptocurrency div */
 .btn-copy.btn {
   background: #57cbcc;
